--- a/.github/workflows/main_scandiwhispers.yml
+++ b/.github/workflows/main_scandiwhispers.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: my-app
           path: .
 
   deploy:
@@ -59,3 +59,4 @@ jobs:
           package: .
 
           
+
